add new website from server na

--- a/xem-phim-moi/bay-nuot-mang/index.html
+++ b/xem-phim-moi/bay-nuot-mang/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1769,18 +1769,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ke-huy-diet-2-ngay-phan-xet" title="Kẻ Hủy Diệt 2: Ngày Phán Xét">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-o-ba-lan-1920" title="Cuộc Chiến Ở Ba Lan 1920">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ke-huy-diet-2-ngay-phan-xet-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-o-ba-lan-1920-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kẻ Hủy Diệt 2: Ngày Phán Xét
+             Cuộc Chiến Ở Ba Lan 1920
             </span>
             <span class="list-top-movie-item-en">
-             Terminator 2: Judgment Day
+             Battle of Warsaw 1920
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/sao-xau-cong-phu" title="Sao xấu Công phu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sao-xau-cong-phu-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sao xấu Công phu
+            </span>
+            <span class="list-top-movie-item-en">
+             Kung Fu Star
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1791,18 +1813,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bac-si-ngoai-hanh-tinh-phan-1" title="Bác Sĩ Ngoài Hành Tinh (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/de-nhu-an-banh-phan-5" title="Dễ như ăn bánh! (Phần 5)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bac-si-ngoai-hanh-tinh-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/de-nhu-an-banh-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bác Sĩ Ngoài Hành Tinh (Phần 1)
+             Dễ như ăn bánh! (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             Resident Alien (Season 1)
+             Nailed It! (Season 5)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1813,18 +1835,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thanh-pho-vo-chu" title="Thành Phố Vô Chủ">
+          <a class="list-top-movie-link" href="/phim-moi/quan-xanh-xuat-kich" title="Quân Xanh Xuất Kích">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-pho-vo-chu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quan-xanh-xuat-kich-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thành Phố Vô Chủ
+             Quân Xanh Xuất Kích
             </span>
             <span class="list-top-movie-item-en">
-             City Of Chaos
+             Blue Strike
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1835,43 +1857,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cam-tavanlar" title="Cam Tavanlar">
+          <a class="list-top-movie-link" href="/phim-moi/hinh-canh-quoc-te" title="Hình Cảnh Quốc Tế">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cam-tavanlar-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hinh-canh-quoc-te-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cam Tavanlar
+             Hình Cảnh Quốc Tế
             </span>
             <span class="list-top-movie-item-en">
-             Glass Ceilings
+             Interpol
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuc-no-hoa-cuc-cung" title="Cục Nợ Hóa Cục Cưng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuc-no-hoa-cuc-cung-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cục Nợ Hóa Cục Cưng
-            </span>
-            <span class="list-top-movie-item-en">
-             Pawn
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
