add new website from server na

--- a/xem-phim-bo/phong-nguyet-vo-bien/index.html
+++ b/xem-phim-bo/phong-nguyet-vo-bien/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             2
             </dd>
             <br/>
            </dl>
@@ -1699,18 +1699,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sieu-sat-thu" title="Siêu Sát Thủ">
+          <a class="list-top-movie-link" href="/phim-moi/angry-birds-phan-3" title="Angry Birds (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sieu-sat-thu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/angry-birds-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Siêu Sát Thủ
+             Angry Birds (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             Asher
+             Angry Birds (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1721,40 +1721,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/somos" title="Somos.">
+          <a class="list-top-movie-link" href="/phim-moi/hac-tao-anh-hung" title="Hắc Tảo Anh Hùng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/somos-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hac-tao-anh-hung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Somos.
+             Hắc Tảo Anh Hùng
             </span>
             <span class="list-top-movie-item-en">
-             Somos.
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/formula-1-cuoc-dua-song-con-phan-6" title="Formula 1: Cuộc Đua Sống Còn (Phần 6)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/formula-1-cuoc-dua-song-con-phan-6-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Formula 1: Cuộc Đua Sống Còn (Phần 6)
-            </span>
-            <span class="list-top-movie-item-en">
-             Formula 1: Drive to Survive Season 6
+             扫黑英雄
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1765,21 +1743,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/au-trung-ma" title="Ấu Trùng Ma">
+          <a class="list-top-movie-link" href="/phim-moi/a-laventure" title="À l’aventure">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/au-trung-ma-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/a-laventure-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ấu Trùng Ma
+             À l’aventure
             </span>
             <span class="list-top-movie-item-en">
-             Slither
+             À l'aventure
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1787,21 +1765,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/21-ngay-truoc-le-cuoi" title="21 Ngày Trước Lễ Cưới">
+          <a class="list-top-movie-link" href="/phim-moi/van-tuong-truyen" title="Vân Tương Truyện">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/21-ngay-truoc-le-cuoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/van-tuong-truyen-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             21 Ngày Trước Lễ Cưới
+             Vân Tương Truyện
             </span>
             <span class="list-top-movie-item-en">
-             21 Ngày Trước Lễ Cưới
+             The Ingenious One
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hanh-vi-pham-toi" title="Hành Vi Phạm Tội">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-vi-pham-toi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hành Vi Phạm Tội
+            </span>
+            <span class="list-top-movie-item-en">
+             Criminal Mind
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
