add new website from server na

--- a/xem-phim-bo/khi-hoa-rung-no-ro/index.html
+++ b/xem-phim-bo/khi-hoa-rung-no-ro/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1715,18 +1715,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoa-hau-dan-khanh" title="Hoa hậu Đan Khánh">
+          <a class="list-top-movie-link" href="/phim-moi/toi-than-yeu" title="Tôi Thân Yêu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoa-hau-dan-khanh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-than-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hoa hậu Đan Khánh
+             Tôi Thân Yêu
             </span>
             <span class="list-top-movie-item-en">
-             Miss Danqing
+             To Dear Myself
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1737,18 +1737,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hay-nho-den-anh" title="Hãy Nhớ Đến Anh">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-tren-pho-tu-ky-hoa-ky" title="Tình yêu trên phổ tự kỷ: Hoa Kỳ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hay-nho-den-anh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-tren-pho-tu-ky-hoa-ky-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hãy Nhớ Đến Anh
+             Tình yêu trên phổ tự kỷ: Hoa Kỳ
             </span>
             <span class="list-top-movie-item-en">
-             Remember Me
+             Love on the Spectrum U.S.
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1759,18 +1759,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xam-nhap" title="Xâm nhập">
+          <a class="list-top-movie-link" href="/phim-moi/cai-gia-cua-su-an-toan" title="Cái giá của sự an toàn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xam-nhap-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cai-gia-cua-su-an-toan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xâm nhập
+             Cái giá của sự an toàn
             </span>
             <span class="list-top-movie-item-en">
-             Intrusion
+             Security
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/suc-manh-cua-nen" title="Sức Mạnh Của Nến">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/suc-manh-cua-nen-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sức Mạnh Của Nến
+            </span>
+            <span class="list-top-movie-item-en">
+             Raeng Tian
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1781,43 +1803,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dau-sat-bat-kha-chien-bai" title="Đầu sắt bất khả chiến bại">
+          <a class="list-top-movie-link" href="/phim-moi/tuoc-tich-lam-gioi-thien-ha" title="Tước Tích – Lâm Giới Thiên Hạ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dau-sat-bat-kha-chien-bai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuoc-tich-lam-gioi-thien-ha-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đầu sắt bất khả chiến bại
+             Tước Tích – Lâm Giới Thiên Hạ
             </span>
             <span class="list-top-movie-item-en">
-             Invincible Iron-head
+             Tước Tích - Lâm Giới Thiên Hạ
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dai-chien-cho-meo-1" title="Đại Chiến Chó Mèo 1">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-chien-cho-meo-1-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đại Chiến Chó Mèo 1
-            </span>
-            <span class="list-top-movie-item-en">
-             Cats &amp; Dogs
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
