add new website from server na

--- a/xem-phim-bo/the-tu-bien-mat-roi/index.html
+++ b/xem-phim-bo/the-tu-bien-mat-roi/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             2
             </dd>
             <br/>
            </dl>
@@ -1752,18 +1752,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mot-can-phong-day-anh-sang-co-thien-than" title="Một Căn Phòng, Đầy Ánh Sáng, Có Thiên Thần">
+          <a class="list-top-movie-link" href="/phim-moi/dich-vu-sugar-baby-tan-nha" title="Dịch Vụ Sugar Baby Tận Nhà">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mot-can-phong-day-anh-sang-co-thien-than-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dich-vu-sugar-baby-tan-nha-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Một Căn Phòng, Đầy Ánh Sáng, Có Thiên Thần
+             Dịch Vụ Sugar Baby Tận Nhà
             </span>
             <span class="list-top-movie-item-en">
-             Studio Apartment, Good Lighting, Angel Included
+             Pet Girl: Secret Helper
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1774,87 +1774,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/7-tay-sung-oai-hung" title="7 Tay Súng Oai Hùng">
+          <a class="list-top-movie-link" href="/phim-moi/hoang-de-lac-da" title="Hoàng Đế Lạc Đà">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/7-tay-sung-oai-hung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoang-de-lac-da-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             7 Tay Súng Oai Hùng
+             Hoàng Đế Lạc Đà
             </span>
             <span class="list-top-movie-item-en">
-             Guns of the Magnificent Seven
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-di-vang-son-cua-sinbad" title="Chuyến Đi Vàng Son của Sinbad">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-di-vang-son-cua-sinbad-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chuyến Đi Vàng Son của Sinbad
-            </span>
-            <span class="list-top-movie-item-en">
-             The Golden Voyage of Sinbad
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mai-la-nguoi-thuong" title="Mãi là người thương">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mai-la-nguoi-thuong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mãi là người thương
-            </span>
-            <span class="list-top-movie-item-en">
-             Always Be My Maybe
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/moi-tinh-khong-loi" title="Mối Tình Không Lời">
-           <span class="status">
-            HD Lồng Tiếng
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/moi-tinh-khong-loi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mối Tình Không Lời
-            </span>
-            <span class="list-top-movie-item-en">
-             A Love of No Words
+             The Emperor's New Groove
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thai-co-than-vuong" title="Thái Cổ Thần Vương">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thai-co-than-vuong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thái Cổ Thần Vương
+            </span>
+            <span class="list-top-movie-item-en">
+             God Of Lost Fantasy
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/everest-nguoi-tuyet-be-nho" title="Everest – Người Tuyết Bé Nhỏ">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/everest-nguoi-tuyet-be-nho-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Everest – Người Tuyết Bé Nhỏ
+            </span>
+            <span class="list-top-movie-item-en">
+             Abominable
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/sat-thu-luoi-keo-phan-4" title="Sát thủ lưỡi kéo (Phần 4)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sat-thu-luoi-keo-phan-4-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Sát thủ lưỡi kéo (Phần 4)
+            </span>
+            <span class="list-top-movie-item-en">
+             Scissor Seven (Season 4)
+            </span>
+            <span class="list-top-movie-item-view">
+             13 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
