add new website from server na

--- a/xem-phim-bo/dem-toi-va-binh-minh/index.html
+++ b/xem-phim-bo/dem-toi-va-binh-minh/index.html
@@ -1196,7 +1196,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             12
+             13
             </dd>
             <br/>
            </dl>
@@ -1743,40 +1743,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lien-minh-cong-ly" title="Liên Minh Công Lý">
+          <a class="list-top-movie-link" href="/phim-moi/hasan-minhaj-ga-he-cua-nha-vua" title="Hasan Minhaj: Gã hề của nhà vua">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lien-minh-cong-ly-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hasan-minhaj-ga-he-cua-nha-vua-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Liên Minh Công Lý
+             Hasan Minhaj: Gã hề của nhà vua
             </span>
             <span class="list-top-movie-item-en">
-             Justice League
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chao-buoi-sang-veronica" title="Chào Buổi Sáng Verônica">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chao-buoi-sang-veronica-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chào Buổi Sáng Verônica
-            </span>
-            <span class="list-top-movie-item-en">
-             Good Morning Verônica
+             Hasan Minhaj: The King's Jester
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1787,18 +1765,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hai-lan-pham-toi" title="Hai Lần Phạm Tội">
+          <a class="list-top-movie-link" href="/phim-moi/chi-tinh-yeu-cuu-duoc-tinh-yeu" title="Chỉ Tình Yêu Cứu Được Tình Yêu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hai-lan-pham-toi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chi-tinh-yeu-cuu-duoc-tinh-yeu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hai Lần Phạm Tội
+             Chỉ Tình Yêu Cứu Được Tình Yêu
             </span>
             <span class="list-top-movie-item-en">
-             Double Jeopardy
+             Reign Over Me
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1809,43 +1787,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-ke-vi" title="Người Kế Vị">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-ke-vi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Người Kế Vị
-            </span>
-            <span class="list-top-movie-item-en">
-             Basilisk: The Ouka Ninja Scrolls
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bat-tien-nhi" title="Bát Tiên Nhí">
+          <a class="list-top-movie-link" href="/phim-moi/tuoi-18" title="Tuổi 18">
            <span class="status">
             HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bat-tien-nhi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuoi-18-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bát Tiên Nhí
+             Tuổi 18
             </span>
             <span class="list-top-movie-item-en">
-             Star Of Tomorrow: The Eight Immortals Cross The Sea
+             A-Teen
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/admiral" title="Admiral">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/admiral-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Admiral
+            </span>
+            <span class="list-top-movie-item-en">
+             Admiral
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/luat-su-jolly" title="Luật Sư Jolly">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luat-su-jolly-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Luật Sư Jolly
+            </span>
+            <span class="list-top-movie-item-en">
+             Jolly LLB
+            </span>
+            <span class="list-top-movie-item-view">
+             6 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
